*SVN*

* Added display of error messages with scaffolded form pages

* Added option to ERB templates to swallow newlines by using <% if something -%> instead of just <% if something %>. Example:

    class SomeController < AbstractApplicationController
    <% if options[:scaffold] %>
      scaffold :<%= singular_name %>
    <% end %>
      helper :post
  
  ...produces this on post as singular_name:

    class SomeController < AbstractApplicationController
    
      scaffold :post
    
      helper :post
  
  ...where as:

    class SomeController < AbstractApplicationController
    <% if options[:scaffold] -%>
      scaffold :<%= singular_name %>
    <% end -%>
      helper :post
  
  ...produces:

    class SomeController < AbstractApplicationController
      scaffold :post
      helper :post
  
  [This undocumented gem for ERb was uncovered by bitsweat]

* Fixed CgiRequest so that it'll now accept session options with Symbols as keys (as the documentation points out) [Suggested by Andreas]

* Added that render_partial will always by default include a counter with value 1 unless there is a counter passed in via the 
  local_assigns hash that overrides it. As a result, render_collection_of_partials can still be written in terms of render_partial
  and partials that make use of a counter can be called without problems from both render_collection_of_partials as well as
  render_partial #295 [marcel]

* Fixed CgiRequest#out to fall back to #write if $stdout doesn't have #syswrite [bitsweat]

* Fixed all helpers so that they use XHTML compliant double quotes for values instead of single quotes [htonl/bitsweat]

* Added link_to_image(src, options = {}, html_options = {}, *parameters_for_method_reference). Documentation:

    Creates a link tag to the image residing at the +src+ using an URL created by the set of +options+. See the valid options in
    link:classes/ActionController/Base.html#M000021. It's also possible to pass a string instead of an options hash to