@@ -28,7 +28,7 @@ module ActionView
       end
     end
   
-    def source_extract
+    def source_extract(indention = 0)
       source_code = IO.readlines(@file_name)
       
       start_on_line = [ line_number - SOURCE_CODE_RADIUS - 1, 0 ].max
@@ -37,9 +37,9 @@ module ActionView
       line_counter = start_on_line
       extract = source_code[start_on_line..end_on_line].collect do |line| 
         line_counter += 1
-        "#{line_counter}: " + line
+        "#{' ' * indention}#{line_counter}: " + line
       end
-    
+
       extract.join
     end
   
@@ -69,6 +69,13 @@ module ActionView
       source_extract + "\n    " +
       clean_backtrace(original_exception).join("\n    ") +
       "\n\n"
+    end
+
+    def backtrace
+      [ 
+        "On line ##{line_number} of #{file_name}\n\n#{source_extract(4)}\n    " + 
+        clean_backtrace(original_exception).join("\n    ")
+      ]
     end
 
     private
